/**
 * PageSkeleton 组件契约测试 (TDD)
 *
 * 契约定义:
 * - PageSkeleton 应作为页面加载占位符
 * - 应支持不同的骨架变体 (default, list, card, etc.)
 * - 应支持自定义动画效果
 * - 应支持自定义颜色和样式
 * - 应支持可配置的骨架行数
 * - 应支持无障碍访问
 *
 * 注意: 此测试为契约测试，组件实现尚不存在
 * 预期: 这些测试在实现前会失败 (RED)
 */

import React from 'react'
import { render, screen } from '@testing-library/react'
import { PageSkeleton } from '../PageSkeleton'

describe('PageSkeleton Component (Contract)', () => {
  describe('Rendering Contract', () => {
    it('should render skeleton container', () => {
      const { container } = render(<PageSkeleton />)

      const skeleton = container.querySelector('.page-skeleton')
      expect(skeleton).toBeInTheDocument()
    })

    it('should render default skeleton variant', () => {
      const { container } = render(<PageSkeleton variant="default" />)

      const skeleton = container.querySelector('.page-skeleton')
      expect(skeleton).toHaveClass('skeleton-default')
    })

    it('should render list skeleton variant', () => {
      const { container } = render(<PageSkeleton variant="list" />)

      const skeleton = container.querySelector('.page-skeleton')
      expect(skeleton).toHaveClass('skeleton-list')
    })

    it('should render card skeleton variant', () => {
      const { container } = render(<PageSkeleton variant="card" />)

      const skeleton = container.querySelector('.page-skeleton')
      expect(skeleton).toHaveClass('skeleton-card')
    })

    it('should render text skeleton variant', () => {
      const { container } = render(<PageSkeleton variant="text" />)

      const skeleton = container.querySelector('.page-skeleton')
      expect(skeleton).toHaveClass('skeleton-text')
    })
  })

  describe('Default Variant Contract', () => {
    it('should render title placeholder', () => {
      const { container } = render(<PageSkeleton variant="default" />)

      const title = container.querySelector('.skeleton-title')
      expect(title).toBeInTheDocument()
    })

    it('should render description placeholder', () => {
      const { container } = render(<PageSkeleton variant="default" />)

      const description = container.querySelector('.skeleton-description')
      expect(description).toBeInTheDocument()
    })

    it('should render content placeholders', () => {
      const { container } = render(<PageSkeleton variant="default" />)

      const content = container.querySelectorAll('.skeleton-content')
      expect(content.length).toBeGreaterThan(0)
    })
  })

  describe('List Variant Contract', () => {
    it('should render configurable number of list items', () => {
      const { container } = render(<PageSkeleton variant="list" count={5} />)

      const items = container.querySelectorAll('.skeleton-list-item')
      expect(items).toHaveLength(5)
    })

    it('should render default number of list items when count not provided', () => {
      const { container } = render(<PageSkeleton variant="list" />)

      const items = container.querySelectorAll('.skeleton-list-item')
      expect(items).toHaveLength(3) // Default expected count
    })

    it('should render list items with avatar when showAvatar is true', () => {
      const { container } = render(
        <PageSkeleton variant="list" showAvatar={true} />
      )

      const avatars = container.querySelectorAll('.skeleton-avatar')
      expect(avatars.length).toBeGreaterThan(0)
    })

    it('should render list items with title and description', () => {
      const { container } = render(<PageSkeleton variant="list" />)

      const titles = container.querySelectorAll('.skeleton-item-title')
      const descriptions = container.querySelectorAll('.skeleton-item-description')

      expect(titles.length).toBeGreaterThan(0)
      expect(descriptions.length).toBeGreaterThan(0)
    })
  })

  describe('Card Variant Contract', () => {
    it('should render card container', () => {
      const { container } = render(<PageSkeleton variant="card" />)

      const card = container.querySelector('.skeleton-card')
      expect(card).toBeInTheDocument()
    })

    it('should render card header', () => {
      const { container } = render(<PageSkeleton variant="card" />)

      const header = container.querySelector('.skeleton-card-header')
      expect(header).toBeInTheDocument()
    })

    it('should render card body', () => {
      const { container } = render(<PageSkeleton variant="card" />)

      const body = container.querySelector('.skeleton-card-body')
      expect(body).toBeInTheDocument()
    })

    it('should render card footer when showFooter is true', () => {
      const { container } = render(
        <PageSkeleton variant="card" showFooter={true} />
      )

      const footer = container.querySelector('.skeleton-card-footer')
      expect(footer).toBeInTheDocument()
    })

    it('should render multiple cards when count > 1', () => {
      const { container } = render(<PageSkeleton variant="card" count={3} />)

      const cards = container.querySelectorAll('.skeleton-card')
      expect(cards).toHaveLength(3)
    })
  })

  describe('Text Variant Contract', () => {
    it('should render configurable number of text lines', () => {
      const { container } = render(<PageSkeleton variant="text" lines={5} />)

      const lines = container.querySelectorAll('.skeleton-text-line')
      expect(lines).toHaveLength(5)
    })

    it('should render default number of text lines when lines not provided', () => {
      const { container } = render(<PageSkeleton variant="text" />)

      const lines = container.querySelectorAll('.skeleton-text-line')
      expect(lines).toHaveLength(3) // Default expected lines
    })

    it('should render text lines with varying widths', () => {
      const { container } = render(<PageSkeleton variant="text" lines={4} />)

      const lines = container.querySelectorAll('.skeleton-text-line')

      // Check that lines have different width classes
      const widths = Array.from(lines).map((line) => {
        const classes = line.className
        if (classes.includes('w-3/4')) return 'w-3/4'
        if (classes.includes('w-1/2')) return 'w-1/2'
        if (classes.includes('w-full')) return 'w-full'
        return 'unknown'
      })

      // Should have at least 2 different widths
      const uniqueWidths = new Set(widths)
      expect(uniqueWidths.size).toBeGreaterThan(1)
    })
  })

  describe('Animation Contract', () => {
    it('should apply shimmer animation by default', () => {
      const { container } = render(<PageSkeleton />)

      const skeleton = container.querySelector('.page-skeleton')
      expect(skeleton).toHaveClass('animate-shimmer')
    })

    it('should support pulse animation variant', () => {
      const { container } = render(<PageSkeleton animation="pulse" />)

      const skeleton = container.querySelector('.page-skeleton')
      expect(skeleton).toHaveClass('animate-pulse')
    })

    it('should support none animation variant', () => {
      const { container } = render(<PageSkeleton animation="none" />)

      const skeleton = container.querySelector('.page-skeleton')
      expect(skeleton).not.toHaveClass('animate-shimmer')
      expect(skeleton).not.toHaveClass('animate-pulse')
    })

    it('should apply animation speed when provided', () => {
      const { container } = render(
        <PageSkeleton animationSpeed="fast" />
      )

      const skeleton = container.querySelector('.page-skeleton')
      expect(skeleton).toHaveClass('animation-fast')
    })
  })

  describe('Styling Contract', () => {
    it('should apply custom color when provided', () => {
      const { container } = render(<PageSkeleton color="gray" />)

      const skeleton = container.querySelector('.page-skeleton')
      expect(skeleton).toHaveClass('skeleton-gray')
    })

    it('should apply custom size when provided', () => {
      const { container } = render(<PageSkeleton size="large" />)

      const skeleton = container.querySelector('.page-skeleton')
      expect(skeleton).toHaveClass('skeleton-large')
    })

    it('should accept custom className', () => {
      const { container } = render(
        <PageSkeleton className="custom-skeleton" />
      )

      const skeleton = container.querySelector('.page-skeleton')
      expect(skeleton).toHaveClass('custom-skeleton')
    })

    it('should accept custom style prop', () => {
      const { container } = render(
        <PageSkeleton style={{ height: '200px' }} />
      )

      const skeleton = container.querySelector('.page-skeleton')
      expect(skeleton).toHaveStyle({ height: '200px' })
    })
  })

  describe('Dimensions Contract', () => {
    it('should accept width prop', () => {
      const { container } = render(<PageSkeleton width="100%" />)

      const skeleton = container.querySelector('.page-skeleton')
      expect(skeleton).toHaveStyle({ width: '100%' })
    })

    it('should accept height prop', () => {
      const { container } = render(<PageSkeleton height="200px" />)

      const skeleton = container.querySelector('.page-skeleton')
      expect(skeleton).toHaveStyle({ height: '200px' })
    })

    it('should accept both width and height props', () => {
      const { container } = render(
        <PageSkeleton width="300px" height="150px" />
      )

      const skeleton = container.querySelector('.page-skeleton')
      expect(skeleton).toHaveStyle({
        width: '300px',
        height: '150px',
      })
    })
  })

  describe('Accessibility Contract', () => {
    it('should have role="status" for accessibility', () => {
      render(<PageSkeleton />)

      const skeleton = screen.getByRole('status')
      expect(skeleton).toBeInTheDocument()
    })

    it('should have aria-live="polite" for screen readers', () => {
      render(<PageSkeleton />)

      const skeleton = screen.getByRole('status')
      expect(skeleton).toHaveAttribute('aria-live', 'polite')
    })

    it('should have accessible label', () => {
      render(<PageSkeleton />)

      const skeleton = screen.getByRole('status')
      expect(skeleton).toHaveAttribute('aria-label', 'Loading content...')
    })

    it('should accept custom aria-label', () => {
      render(<PageSkeleton ariaLabel="Loading tasks..." />)

      const skeleton = screen.getByRole('status')
      expect(skeleton).toHaveAttribute('aria-label', 'Loading tasks...')
    })
  })

  describe('Edge Cases Contract', () => {
    it('should render with count of 0', () => {
      const { container } = render(<PageSkeleton variant="list" count={0} />)

      const items = container.querySelectorAll('.skeleton-list-item')
      expect(items).toHaveLength(0)
    })

    it('should render with count of 1', () => {
      const { container } = render(<PageSkeleton variant="card" count={1} />)

      const cards = container.querySelectorAll('.skeleton-card')
      expect(cards).toHaveLength(1)
    })

    it('should render with large count', () => {
      const { container } = render(<PageSkeleton variant="list" count={50} />)

      const items = container.querySelectorAll('.skeleton-list-item')
      expect(items).toHaveLength(50)
    })

    it('should handle null or undefined props gracefully', () => {
      const { container } = render(
        <PageSkeleton
          className={null}
          style={undefined}
          width={null}
        />
      )

      const skeleton = container.querySelector('.page-skeleton')
      expect(skeleton).toBeInTheDocument()
    })
  })

  describe('Responsive Contract', () => {
    it('should have responsive classes', () => {
      const { container } = render(<PageSkeleton />)

      const skeleton = container.querySelector('.page-skeleton')
      expect(skeleton).toHaveClass('responsive')
    })

    it('should adjust columns on different screen sizes', () => {
      const { container } = render(<PageSkeleton variant="card" count={4} />)

      const skeleton = container.querySelector('.page-skeleton')
      expect(skeleton).toHaveClass('grid-cols-1') // Mobile
      expect(skeleton).toHaveClass('md:grid-cols-2') // Tablet
      expect(skeleton).toHaveClass('lg:grid-cols-4') // Desktop
    })
  })

  describe('Custom Content Contract', () => {
    it('should support custom header component', () => {
      const customHeader = <div data-testid="custom-header">Custom Header</div>

      render(<PageSkeleton header={customHeader} />)

      expect(screen.getByTestId('custom-header')).toBeInTheDocument()
    })

    it('should support custom footer component', () => {
      const customFooter = <div data-testid="custom-footer">Custom Footer</div>

      render(<PageSkeleton footer={customFooter} />)

      expect(screen.getByTestId('custom-footer')).toBeInTheDocument()
    })

    it('should render custom header and footer together', () => {
      const customHeader = <div data-testid="custom-header">Header</div>
      const customFooter = <div data-testid="custom-footer">Footer</div>

      render(<PageSkeleton header={customHeader} footer={customFooter} />)

      expect(screen.getByTestId('custom-header')).toBeInTheDocument()
      expect(screen.getByTestId('custom-footer')).toBeInTheDocument()
    })
  })

  describe('Snapshot Contract', () => {
    it('should match snapshot for default variant', () => {
      const { container } = render(<PageSkeleton variant="default" />)

      expect(container.firstChild).toMatchSnapshot()
    })

    it('should match snapshot for list variant', () => {
      const { container } = render(<PageSkeleton variant="list" count={3} />)

      expect(container.firstChild).toMatchSnapshot()
    })

    it('should match snapshot for card variant', () => {
      const { container } = render(<PageSkeleton variant="card" count={4} />)

      expect(container.firstChild).toMatchSnapshot()
    })

    it('should match snapshot for text variant', () => {
      const { container } = render(<PageSkeleton variant="text" lines={5} />)

      expect(container.firstChild).toMatchSnapshot()
    })

    it('should match snapshot with pulse animation', () => {
      const { container } = render(<PageSkeleton animation="pulse" />)

      expect(container.firstChild).toMatchSnapshot()
    })

    it('should match snapshot with custom styling', () => {
      const { container } = render(
        <PageSkeleton
          className="custom-class"
          width="300px"
          color="gray"
        />
      )

      expect(container.firstChild).toMatchSnapshot()
    })
  })
})
